<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="google_api_key">AIzaSyAoOXVfn8F2xGPfNbOKn8BgebkL4vZ5bIg</string>
    <string name="app_name">JOOBA</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="slogen">מקומות העבודה \n הכי פיירים</string>
    <string name="opening_houers">Opening Hours:</string>
    <string name="new_job">משרה חדשה</string>
    <string name="deserve">מה מגיע לי?</string>

    <string name="yes">כן</string>
    <string name="no">לא</string>

    <!-- Params data -->
    <string name="param1_text">

האם קיבלת שכר על שעות ההתלמדות שלך?

    </string>

    <string name="param2_text">

    מהו השכר לשעה ?

    </string>

    <string name="param2_default">
        הכנס שכר כאן...
    </string>

    <string name="param3_text">

        האם המשמרת מסתיימת עד השעה 22:00 ?

    </string>


    <string name="param4_text">
        האם ניתן תשלום עבור הוצאות נסיעה ?
    </string>

    <string name="param5_text">
        האם ניתן תשלום עבור ישיבות צוות ?
    </string>
    <string name="work_until">עבודה עד השעה 22:00</string>
    <string name="pay_for_ap">תשלום על התלמדות</string>
    <string name="atmo">
        אווירה במקום
     \n
    </string>
    <string name="pay_for_t">תשלום על ישיבות צוות</string>
    <string name="transport">תשלום על הוצאות נסיעה</string>
    <string name="param6_text">האווירה במקום</string>
    <string name="payment">שכר ממוצע לשעה</string>
    <string name="param7_text">העובדים מספרים ש...</string>
    <string name="param7_hint">ספר לנו מה אתה חושב על מקום העבודה שלך...</string>


</resources>
