<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/param1_text"
        android:autoText="false"
        android:textDirection="rtl"
        android:gravity="right"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView"
        android:padding="15dp"
        android:layout_marginTop="70dp"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/x"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/param_no"
            android:text="@string/no"
            android:textSize="30sp"
            android:layout_margin="15dp"

         />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/v"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/param_yes"
            android:text="@string/yes"
            android:textSize="30sp"
            android:layout_margin="15dp"
         />
    </RadioGroup>


</RelativeLayout>